Add new files for learning resources, update .gitignore, modify verification scripts, and enhance README with installation instructions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-streamlit
-opencv-python
-librosa
-torch
-numpy
-sounddevice
-transformers
-deepface
-tensorflow
+numpy<2
+tensorflow==2.10
 pandas
+librosa
+opencv-python
 scikit-learn
+streamlit
+keras
+sounddevice
+tqdm
+ipywidgets
