Add audio recording functionality and update requirements; include training log and model files

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-numpy<2
-tensorflow==2.10
+numpy>=1.19.0
+tensorflow>=2.0.0
 pandas
-librosa
-opencv-python
+librosa>=0.8.0
+opencv-python>=4.5.0
 scikit-learn
-streamlit
-keras
-sounddevice
+streamlit>=1.0.0
+keras>=2.4.0
+sounddevice>=0.4.0
 tqdm
 ipywidgets
 nltk
+SpeechRecognition>=3.8.1
+PyAudio>=0.2.11
