Implement multi-modal emotion recognition models for images, text, and audio
- Added `train_image_model.py` for training an image emotion recognition model using CNN.
- Introduced `train_text_model.py` for a multi-label text emotion classification model with LSTM and attention mechanisms.
- Created `train_text_model_optimised.py` with advanced optimizations including mixed precision, warmup learning rate, and transformer-style architecture.
- Developed `train_audio_model.py` for audio emotion recognition using Conv1D and LSTM.
- Enhanced data loading and preprocessing functions for all models.
- Implemented early stopping and model checkpointing for better training management.
- Improved model architectures and training strategies for better performance and efficiency.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,2 @@
-data/
-tf_env/
-.venv
-.vscode
-tempCodeRunnerFile.py
-training/__pycache__/
-learn.txt
-models/logs/
-models/tokenizer.pkl
-logs/
+/emo_detec
+/datasets
